--- a/Server/package.json
+++ b/Server/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",   
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http": "^0.0.1-security",
+    "mongoose": "^8.9.3",
     "nodemon": "^3.1.9"
   }
 }
